添加了用户白名单的内容

--- a/templates/access-manage.html
+++ b/templates/access-manage.html
@@ -1,7 +1,7 @@
 <div>
     <ul id="myTab" class="nav nav-tabs">
-        <li class="active"><a ui-sref=".userAC" data-target="#userAC" data-toggle="tab">用户</a></li>
-        <li><a ui-sref=".attributeAC" data-target="#attributeAC" data-toggle="tab">属性</a></li>
+        <li class="active access-manage-title"><a ui-sref=".userAC" data-target="#userAC" data-toggle="tab">用户</a></li>
+        <li class="access-manage-title"><a ui-sref=".attributeAC" data-target="#attributeAC" data-toggle="tab">属性</a></li>
     </ul>
     <div ui-view class="tab-content">
     </div>
