--- a/templates/user-ac.html
+++ b/templates/user-ac.html
@@ -4,16 +4,39 @@
             <div class="panel-heading">
                 <h4 class="panel-title">
                     <a data-toggle="collapse" data-parent="#accordion"
-                       href="#collapseOne">
+                       href="#white-list">
                         白名单
                     </a>
                  </h4>
             </div>
-            <div id="collapseOne" class="panel-collapse collapse in">
+            <div id="white-list" class="panel-collapse collapse in">
                 <div class="panel-body">
-                    Nihil anim keffiyeh helvetica, craft beer labore wes anderson
-                    cred nesciunt sapiente ea proident. Ad vegan excepteur butcher
-                    vice lomo.
+                    <div class="user-ac-operation">
+                        <form role="search">
+                            <div class="form-group">
+                                <input type="text" class="form-control" placeholder="请输入查询内容" id="keyValue" required>
+                            </div>
+                            <button type="submit" class="btn btn-default" ng-click="search()">查询</button>
+                            <button class="btn btn-default" ng-click="addWhite()">新增</button>
+                        </form>
+                    </div>
+                    <table class="table">
+                        <thead class="ac-list">
+                        <tr>
+                            <th>用户名</th>
+                            <th>状态改变</th>
+                            <th>操作</th>
+                        </tr>
+                        </thead>
+                        <tbody class="ac-list">
+                        <tr ng-repeat="item in whiteList">
+                            <th>{{item.userName}}</th>
+                            <th ng-if="item.state == 1" style="padding-left:18px"><button class="user-ac-state">强制</button></th>
+                            <th ng-if="item.state == 0" style="padding-left:18px"><button class="user-ac-state">推荐</button></th>
+                            <th><button class="user-ac-delete">删除</button></th>
+                        </tr>
+                        </tbody>
+                    </table>
                 </div>
             </div>
         </div>
@@ -21,12 +44,12 @@
             <div class="panel-heading">
                 <h4 class="panel-title">
                     <a data-toggle="collapse" data-parent="#accordion"
-                       href="#collapseTwo">
+                       href="#black-list">
                         黑名单
                     </a>
                 </h4>
             </div>
-            <div id="collapseTwo" class="panel-collapse collapse">
+            <div id="black-list" class="panel-collapse collapse">
                 <div class="panel-body">
                     Nihil anim keffiyeh helvetica, craft beer labore wes anderson
                     cred nesciunt sapiente ea proident. Ad vegan excepteur butcher
