--- a/templates/attribute-ac.html
+++ b/templates/attribute-ac.html
@@ -1,10 +1,30 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Attribute AC</title>
-</head>
-<body>
-    <p>This is the attribute AC Page.</p>
-</body>
-</html>
+<div style="margin-top: 15px;">
+    <span style="color: gray;">*满足以下属性的用户将被允许访问目标数据</span>
+    <div class="ac-operation">
+        <form role="search">
+            <div class="form-group">
+                <input type="text" class="form-control" placeholder="请输入查询内容" id="attrKeyValue">
+            </div>
+            <button type="submit" class="btn btn-default ac-search" ng-click="searchAttr()">查询</button>
+            <a class="btn btn-default ac-add" href="#addAttr">新增</a>
+        </form>
+    </div>
+    <table class="table">
+        <thead class="ac-list">
+        <tr>
+            <th>角色</th>
+            <th>使用时间</th>
+            <th>状态改变</th>
+            <th>操作</th>
+        </tr>
+        </thead>
+        <tbody class="ac-list">
+        <tr ng-repeat="item in attrList">
+            <th>{{item.userRole==0?"管理员":"租户"}}</th>
+            <th>{{item.startTime}}-{{item.endTime}}</th>
+            <th style="padding-left:18px"><button class="ac-state" ng-click="changeState()">{{item.state==1?"强制":"推荐"}}</button></th>
+            <th><button class="ac-delete"><span class="glyphicon glyphicon-trash" ng-click="deleteAttr()"></span></button></th>
+        </tr>
+        </tbody>
+    </table>
+</div>
