--- a/templates/attribute-ac.html
+++ b/templates/attribute-ac.html
@@ -6,8 +6,37 @@
                 <input type="text" class="form-control" placeholder="请输入查询内容" id="attrKeyValue">
             </div>
             <button type="submit" class="btn btn-default ac-search" ng-click="searchAttr()">查询</button>
-            <a class="btn btn-default ac-add" href="#addAttr">新增</a>
+            <a class="btn btn-default ac-add" data-toggle="modal" data-target="#addAttr">新增</a>
         </form>
+    </div>
+    <!-- Attribute List Modal -->
+    <div class="modal fade" id="addAttr" role="dialog">
+        <div class="modal-dialog">
+            <!-- Modal content-->
+            <div class="modal-content" style="width: 400px; margin-top: 100px">
+                <div class="modal-header">
+                    <button type="button" class="close" data-dismiss="modal">&times;</button>
+                    <h4 class="modal-title" style="text-align: center">添加属性</h4>
+                </div>
+                <div class="modal-body">
+                    <p class="ac-p">选择用户角色：</p>
+                    <form>
+                        <select name="roles" id="addAttrRole">
+                            <option value="tenant">租户</option>
+                            <option value="administrator">管理员</option>
+                        </select>
+                    </form>
+
+                    <p></p>
+
+                    <div class="error-message"></div>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-default ac-add" ng-click="addAttr()">新增</button>
+                    <button type="button" class="btn btn-default ac-search" data-dismiss="modal">取消</button>
+                </div>
+            </div>
+        </div>
     </div>
     <table class="table">
         <thead class="ac-list">
