--- a/templates/user-ac.html
+++ b/templates/user-ac.html
@@ -12,27 +12,42 @@
             <div id="white-list" class="panel-collapse collapse in">
                 <div class="panel-body">
                     <div class="ac-operation">
-                        <div id="example" class="modal hide fade in" style="display: none; ">
-                            <div class="modal-header">
-                                <a class="close" data-dismiss="modal">×</a>
-                                <h3>This is a Modal Heading</h3>
-                            </div>
-                            <div class="modal-body">
-                                <h4>Text in a modal</h4>
-                                <p>You can add some text here.</p>
-                            </div>
-                            <div class="modal-footer">
-                                <a href="#" class="btn btn-success">Call to action</a>
-                                <a href="#" class="btn" data-dismiss="modal">Close</a>
-                            </div>
-                        </div>
                         <form role="search">
                             <div class="form-group">
                                 <input type="text" class="form-control" placeholder="请输入查询内容" id="whiteKeyValue">
                             </div>
                             <button type="submit" class="btn btn-default ac-search" ng-click="searchWhite()">查询</button>
-                            <a class="btn btn-default ac-add" data-toggle="modal" href="#example">新增</a>
+                            <a class="btn btn-default ac-add" data-toggle="modal" data-target="#addWhite">新增</a>
                         </form>
+                    </div>
+                    <!-- White List Modal -->
+                    <div class="modal fade" id="addWhite" role="dialog">
+                        <div class="modal-dialog">
+                            <!-- Modal content-->
+                            <div class="modal-content" style="width: 400px; margin-top: 100px">
+                                <div class="modal-header">
+                                    <button type="button" class="close" data-dismiss="modal">&times;</button>
+                                    <h4 class="modal-title" style="text-align: center">添加用户</h4>
+                                </div>
+                                <div class="modal-body">
+                                    <p class="ac-p">用户名：</p>
+                                    <input type="text" id="addWhiteKey">
+                                    <p></p>
+                                    <form>
+                                        <P class="ac-p">状态：</P>
+                                        <div class="ac-div">
+                                            <input type="radio" checked="checked" name="state" value="force" style="margin-right:5px;"/>强制
+                                            <input type="radio" name="state" value="recommend" style="margin-left: 20px; margin-right:5px;"/>推荐
+                                        </div>
+                                    </form>
+                                    <div class="error-message"></div>
+                                </div>
+                                <div class="modal-footer">
+                                    <button type="button" class="btn btn-default ac-add" ng-click="addWhite()">新增</button>
+                                    <button type="button" class="btn btn-default ac-search" data-dismiss="modal">取消</button>
+                                </div>
+                            </div>
+                        </div>
                     </div>
                     <table class="table">
                         <thead class="ac-list">
@@ -70,8 +85,30 @@
                                 <input type="text" class="form-control" placeholder="请输入查询内容" id="blackKeyValue">
                             </div>
                             <button type="submit" class="btn btn-default ac-search" ng-click="searchBlack()">查询</button>
-                            <a class="btn btn-default ac-add" href="#addBlack">新增</a>
+                            <a class="btn btn-default ac-add" data-toggle="modal" data-target="#addBlack">新增</a>
                         </form>
+                    </div>
+                    <!-- Black List Modal -->
+                    <div class="modal fade" id="addBlack" role="dialog">
+                        <div class="modal-dialog">
+                            <!-- Modal content-->
+                            <div class="modal-content" style="width: 400px; margin-top: 100px">
+                                <div class="modal-header">
+                                    <button type="button" class="close" data-dismiss="modal">&times;</button>
+                                    <h4 class="modal-title" style="text-align: center">添加用户</h4>
+                                </div>
+                                <div class="modal-body">
+                                    <p class="ac-p">用户名：</p>
+                                    <input type="text" id="addBlackKey"/>
+                                    <p></p>
+                                    <div class="error-message"></div>
+                                </div>
+                                <div class="modal-footer">
+                                    <button type="button" class="btn btn-default ac-add" ng-click="addBlack()">新增</button>
+                                    <button type="button" class="btn btn-default ac-search" data-dismiss="modal">取消</button>
+                                </div>
+                            </div>
+                        </div>
                     </div>
                     <table class="table">
                         <thead class="ac-list">
