前端页面内容实现，需要添加js部分数据获取的逻辑

--- a/templates/attribute-ac.html
+++ b/templates/attribute-ac.html
@@ -26,9 +26,14 @@
                             <option value="administrator">管理员</option>
                         </select>
                     </form>
-
                     <p></p>
-
+                    <p class="ac-p">选择使用时间：</p>
+                    <div class="ac-div">
+                        开始时间<input type="time" name="startTime" value="00:00" style="width: 100px; margin-left:20px;"/>
+                        <p></p>
+                        结束时间<input type="time" name="endTime" value="23:59" style="width: 100px; margin-left:20px;"/>
+                        <p></p>
+                    </div>
                     <div class="error-message"></div>
                 </div>
                 <div class="modal-footer">
