--- a/templates/user-ac.html
+++ b/templates/user-ac.html
@@ -31,7 +31,7 @@
                                 </div>
                                 <div class="modal-body">
                                     <p class="ac-p">用户名：</p>
-                                    <input type="text" id="addWhiteKey">
+                                    <input type="text" id="addWhiteKey" placeholder="请输入用户名">
                                     <p></p>
                                     <form>
                                         <P class="ac-p">状态：</P>
@@ -99,7 +99,7 @@
                                 </div>
                                 <div class="modal-body">
                                     <p class="ac-p">用户名：</p>
-                                    <input type="text" id="addBlackKey"/>
+                                    <input type="text" id="addBlackKey" placeholder="请输入用户名"/>
                                     <p></p>
                                     <div class="error-message"></div>
                                 </div>
